# scientific_fastapi

./: .env.example  CITATION.cff  Dockerfile  README.EN.md  README.md  docker-compose.yml  mlflow.db  nginx.conf  pyproject.toml
.github/workflows/: publish.yml
docs/: api_reference.md  architecture.md
scripts/: generate_figure_1.py  run_paper_pipeline.py
src/scientific_api/: main.py
src/scientific_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/scientific_api/adapters/: mlflow_adapter.py
src/scientific_api/api/: dependencies.py
src/scientific_api/api/v1/endpoints/: simulations.py
src/scientific_api/core/: config.py  experiment_tracker.py  queue_manager.py  task_store.py
src/scientific_api/models/: physics_engine.py
src/scientific_api/schemas/: simulation.py
src/scientific_api/services/: simulation_service.py
tests/api/: test_simulations.py
