[project]
name = "scientific-api"
version = "0.1.0"
description = "High-performance API for computational physics experiments"
requires-python = ">=3.12"
authors = [
  { name = "Artem Alimpiev", email = "alimpievne@gmail.com" }
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "numpy>=2.1.0",
    "httpx>=0.27.0", # Для асинхронного тестирования
    "mlflow>=2.17.0",
    "redis>=5.0.0",
    "matplotlib>=3.9.0",
    "jupyter>=1.0.0",
    "papermill>=2.6.0",
    "jupytext>=1.16.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
    "pyright>=1.1.0",
]


[tool.ruff.lint]
fixable = ["ALL"]

[tool.pytest.ini_options]
asyncio_mode = "auto"